package com.workingflow.share.protobuff;


option java_outer_classname = "Protocol";

message Request {
    required string uuid = 1;
    required string clientId = 2;
    extensions 3 to 200; //Posible Extensions
}

message AuthenticatedRequest {
    required Request request = 1;
    required string token = 2;
    extensions 3 to 200;
}

message Command {
    message Parameter {
        required string name = 1;
        required string value = 2;
    }

    required int32 priority = 1 [default = 5];
    required AuthenticatedRequest request = 2;
    required string command = 3;
    repeated Parameter params = 4;
    
}

message Connect {
    required Request request = 1;
    required string user = 2;
    required string passwd = 3;
}

message Response {
    required string uuid = 1;
    required string uuidRelation = 2;
    enum Status{
        Unauthorized = 1;
        Forbidden = 2;
        NotImplemented = 3;
        Accepted = 4;
    }

    required Status status = 3 [default = Forbidden];
    extensions 4 to 200;
}

message ConnectResponse{
    required Response response = 1;
    required string token = 2;
    required string user = 3;
}

message MetaResponse {
    optional Response response = 1;
    optional ConnectResponse connectResponse = 2;
}


message MetaRequest {
    optional Command command = 1;
    optional Connect connect = 2;
}
